cmake_minimum_required(VERSION 3.10)
find_package(MPI REQUIRED)

add_executable(ctest0 ctest0.c)
add_executable(ctest1 ctest1.c)
add_test(ctest0 ctest0)
add_test(ctest1 ctest1)
target_link_libraries(ctest0 PUBLIC mpisee)
target_link_libraries(ctest1 PUBLIC mpisee)
#set_property(TARGET ctest0 PROPERTY CROSSCOMPILING_EMULATOR '${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS}')
target_include_directories(ctest0 PRIVATE ${MPI_C_INCLUDE_PATH})
target_compile_options(ctest0 PRIVATE ${MPI_C_COMPILE_FLAGS})
target_link_libraries(ctest0 PRIVATE ${MPI_C_LIBRARIES} ${MPI_CXX_LINK_FLAGS})
target_include_directories(ctest0 PUBLIC "${PROJECT_SOURCE_DIR}/")

target_include_directories(ctest1 PRIVATE ${MPI_C_INCLUDE_PATH})
target_compile_options(ctest1 PRIVATE ${MPI_C_COMPILE_FLAGS})
target_link_libraries(ctest1 PRIVATE ${MPI_C_LIBRARIES} ${MPI_CXX_LINK_FLAGS})
target_include_directories(ctest1 PUBLIC "${PROJECT_SOURCE_DIR}/")
